# Gnosis-KB

./: .env.example  .env.test  .gitignore  AUDIT.md  CLAUDE.md  DEVELOPMENT.md  README.md  deploy.sh  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml  frontend-tests.yml
backend/: Dockerfile  alembic.ini  gnosis_dev.db  mypy.ini  pyproject.toml  requirements.txt  test_gnosis.db
backend/alembic/: env.py
backend/alembic/versions/: 0002_add_review_cards.py  0003_add_fts_tsvector.py  0004_add_users.py  0005_add_saved_queries.py  001_initial_schema.py  002_multi_user_namespace.py  003_saved_query_owner.py  004_fix_tags_schema.py
backend/gnosis/: __init__.py  config.py  database.py  main.py
backend/gnosis/core/: __init__.py  auth.py  events.py  exceptions.py  logging.py  middleware.py  namespace.py  rate_limit.py  sm2.py  sm2_test.py
backend/gnosis/models/: __init__.py  attachment.py  link.py  note.py  review.py  saved_query.py  shared_vault.py  tag.py  user.py
backend/gnosis/routers/: __init__.py  admin.py  ai.py  auth.py  export.py  graph.py  health.py  ingest.py  neurolink.py  notes.py  query.py  review.py  search.py  tags.py  users.py  vault.py  ws.py
backend/gnosis/schemas/: __init__.py  ai.py  auth.py  graph.py  note.py  query.py  review.py  search.py
backend/gnosis/services/: __init__.py  document_parser.py  embeddings.py  fts.py  fts_test.py  graph_rag.py  hybrid_search.py  ingest_queue.py  llm_provider.py  markdown_parser.py  query_parser.py  vault_sync.py  vector_store.py
backend/scripts/: backfill_owner_ids.py
backend/tests/: __init__.py  conftest.py  test_admin.py  test_admin_coverage.py  test_admin_edge_coverage.py  test_admin_router.py  test_ai.py  test_ai_arc_coverage.py  test_ai_edge_coverage.py  test_ai_extras.py  test_ai_line_coverage.py  test_ai_router.py  test_auth.py  test_auth_router.py  test_core_auth.py  test_coverage_boost.py  test_coverage_gaps2.py  test_coverage_precision.py  test_coverage_remaining.py  test_database.py  test_document_parser.py  test_document_parser_coverage.py  test_document_parser_gaps.py  test_e2e.py  test_embeddings.py  test_embeddings_coverage.py  test_embeddings_service.py  test_export.py  test_export_router.py  test_final_gaps.py  test_fts.py  test_fts_coverage.py  test_graph.py  test_graph_rag.py  test_graph_rag_coverage.py  test_graph_rag_edge_coverage.py  test_graph_router.py  test_health.py  test_health_router.py  test_health_router_coverage.py  (+53 more)
backend/tests/integration/: test_graph_rag_integration.py  test_graph_router_integration.py  test_llm_provider_integration.py  test_system.py  test_users_admin_integration.py
backend/vault/: Gnosis-Knowledge-Base-Build-Spec.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.sw.json  vite.config.ts
frontend/coverage/.tmp/: coverage-0.json  coverage-1.json  coverage-10.json  coverage-11.json  coverage-12.json  coverage-13.json  coverage-14.json  coverage-15.json  coverage-16.json  coverage-17.json  coverage-18.json  coverage-19.json  coverage-2.json  coverage-20.json  coverage-21.json  coverage-22.json  coverage-23.json  coverage-24.json  coverage-25.json  coverage-26.json  coverage-27.json  coverage-28.json  coverage-29.json  coverage-3.json  coverage-30.json  coverage-31.json  coverage-32.json  coverage-33.json  coverage-34.json  coverage-35.json  coverage-36.json  coverage-37.json  coverage-38.json  coverage-39.json  coverage-4.json  coverage-40.json  coverage-41.json  coverage-42.json  coverage-43.json  (+44 more)
frontend/e2e/: gnosis.spec.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  cytoscape-fcose.d.ts  index.css  main.tsx  registerSW.ts  sw.ts  vite-env.d.ts
nginx/: README.md  certbot-renew.service  certbot-renew.timer  gnosis.conf  nginx.conf  nginx.dev.conf
scripts/: backup.sh  fix_owner_ids.py
vault/00-inbox/: 20260619-cybernetics-second-order.md  20260619-emptiness-first-encounter.md  welcome-to-gnosis.md  zettelkasten-method.md
vault/01-concepts/: autopoiesis-self-organization.md  dependent-origination-systems-thinking.md  zettelkasten-atomicity-principle.md
vault/02-projects/: gnosis-kb-build-log.md
vault/03-evergreen/: knowledge-graph-contemplative-practice.md  spaced-repetition-consolidation-of-insight.md
vault/10-zettelkasten/: atomic-notes.md  contemplative-inquiry-and-note-taking.md  dependent-origination.md  emergence-and-complexity.md  epistemology-and-justified-belief.md  impermanence-anicca.md  knowledge-graph-as-mind-map.md  maps-of-content.md  second-order-cybernetics.md  systems-thinking-overview.md  wikilinks-as-thought-connectors.md  zettelkasten-method.md
vault/40-teachings/: awareness-and-rigpa.md  impermanence-and-change.md
vault/Buddhism/: Bodhicitta.md  Dzogchen.md  Shunyata.md  Three-Jewels.md
vault/Daily/: 2026-06-19.md
vault/Systems/: Cybernetics-and-Second-Order-Thinking.md  General-Systems-Theory.md
(+189 files in other folders)
