[project]
name = "gnosis-api"
version = "1.0.0"
requires-python = ">=3.12"
description = "Gnosis Knowledge Base — FastAPI backend"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "fastapi-mcp>=0.3.0",

    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",

    # Vector database
    "qdrant-client>=1.9.0",
    "fastembed>=0.3.0",

    # AI / LLM
    "lightrag-hku>=1.3.0",
    "ollama>=0.2.0",
    "openai>=1.40.0",

    # Document parsing
    "python-frontmatter>=1.1.0",
    "mistune>=3.0.2",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.2",
    "pytesseract>=0.3.10",
    "Pillow>=10.3.0",

    # Filesystem watching
    "watchdog>=4.0.0",

    # Utilities
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "python-slugify>=8.0.4",
    "networkx>=3.3",
    "rank_bm25>=0.2.2",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "anyio[trio]>=4.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gnosis"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "C90"]
ignore = ["S101", "S106", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["gnosis"]
omit = ["tests/*", "alembic/*"]
