[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnosis-kb"
version = "1.0.0"
requires-python = ">=3.12"
description = "Gnosis Knowledge Base"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",

    # MCP — optional at runtime, installed here so it's available
    "fastapi-mcp>=0.3.0",

    # Database
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",

    # Settings / auth
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",

    # Rate limiting
    "slowapi>=0.1.9",

    # Markdown + vault
    "python-frontmatter>=1.1.0",
    "mistune>=3.0.2",
    "python-slugify>=8.0.4",
    "watchdog>=6.0.0",

    # Vector search
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.0",

    # Graph
    "networkx>=3.4.0",

    # LLM providers
    "ollama>=0.3.3",
    "openai>=1.51.0",

    # Document parsing
    "pymupdf>=1.24.0",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "pytesseract>=0.3.13",
    "pillow>=11.0.0",

    # LightRAG — optional heavy dep; install separately if needed
    # "lightrag-hku>=1.0.0",
]

[project.optional-dependencies]
ai = [
    "lightrag-hku>=1.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.6.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gnosis*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=gnosis --cov-branch --cov-report=term-missing:skip-covered"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["gnosis"]
branch = true
# "thread" catches sync code in worker threads.
# "greenlet" catches SQLAlchemy greenlet-dispatched coroutines.
# "asyncio" catches native asyncio coroutine bodies (FastAPI async handlers)
# that run on the event loop but aren't attributed to the main thread by
# coverage.py's default C-tracer.
concurrency = ["thread", "greenlet", "asyncio"]
omit = [
    "gnosis/core/sm2_test.py",
    "gnosis/services/fts_test.py",
    "gnosis/core/logging.py",
    "gnosis/core/middleware.py",
    "gnosis/core/events.py",
    "gnosis/schemas/graph.py",
]

[tool.coverage.report]
fail_under = 50
show_missing = true
skip_covered = true
omit = [
    "gnosis/core/sm2_test.py",
    "gnosis/services/fts_test.py",
    "gnosis/core/logging.py",
    "gnosis/core/middleware.py",
    "gnosis/core/events.py",
    "gnosis/schemas/graph.py",
]
